[package]
name = "blog-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
comrak = "0.39.1"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.46.0", features = ["full"] }
toml = "0.9.0"
tower-http = { version = "0.6.6", features = ["fs"] }
